src/mdParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g 2012-05-19 21:32:58

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class mdParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LengTipo", "ALIASA", "Fecha", "Hora", "UbicacionC", "Int", "Bool", "String", "'$'", "'.'", "'$$'", "'{'", "'}'", "'/'", "'..'", "'class'", "'/class'", "':'", "'~'", "','", "'+'", "'nombre'", "'dir'", "'++'", "'#'", "'in'", "'/in'", "'out'", "'/out'", "'##'", "'-'", "'||'", "'&&'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'*'", "'//'", "'!'", "'('", "')'", "'%='", "'=%'", "';'", "'else'", "'if'", "'while'"
    };
    public static final int EOF=-1;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int LengTipo=4;
    public static final int ALIASA=5;
    public static final int Fecha=6;
    public static final int Hora=7;
    public static final int UbicacionC=8;
    public static final int Int=9;
    public static final int Bool=10;
    public static final int String=11;

    // delegates
    // delegators


        public mdParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public mdParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return mdParser.tokenNames; }
    public String getGrammarFileName() { return "/home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g"; }


    protected void mismatch(IntStream input, int ttype, BitSet follow)
        throws RecognitionException
    {
        throw new MismatchedTokenException(ttype, input);
    }

    public Object recoverFromMismatchedSet(IntStream input,
                                         RecognitionException e,
                                         BitSet follow)
        throws RecognitionException
    {
        throw e;
    }
            

    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:32:1: prog : md EOF ;
    public final mdParser.prog_return prog() throws RecognitionException {
        mdParser.prog_return retval = new mdParser.prog_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        mdParser.md_return md1 = null;


        Object EOF2_tree=null;

        try {
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:32:11: ( md EOF )
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:32:19: md EOF
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_md_in_prog79);
            md1=md();

            state._fsp--;

            adaptor.addChild(root_0, md1.getTree());
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog81); 
            EOF2_tree = (Object)adaptor.create(EOF2);
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

                    catch (RecognitionException e) 
                    {
                        throw e;
                    }
                    finally {
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class md_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "md"
    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:33:1: md : ( listLengArchivo | listLengClases | listLengComandos | listLengFns | listLengApp )+ ;
    public final mdParser.md_return md() throws RecognitionException {
        mdParser.md_return retval = new mdParser.md_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        mdParser.listLengArchivo_return listLengArchivo3 = null;

        mdParser.listLengClases_return listLengClases4 = null;

        mdParser.listLengComandos_return listLengComandos5 = null;

        mdParser.listLengFns_return listLengFns6 = null;

        mdParser.listLengApp_return listLengApp7 = null;



        try {
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:33:6: ( ( listLengArchivo | listLengClases | listLengComandos | listLengFns | listLengApp )+ )
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:33:8: ( listLengArchivo | listLengClases | listLengComandos | listLengFns | listLengApp )+
            {
            root_0 = (Object)adaptor.nil();

            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:33:8: ( listLengArchivo | listLengClases | listLengComandos | listLengFns | listLengApp )+
            int cnt1=0;
            loop1:
            do {
                int alt1=6;
                switch ( input.LA(1) ) {
                case 12:
                    {
                    alt1=1;
                    }
                    break;
                case 19:
                    {
                    alt1=2;
                    }
                    break;
                case 24:
                    {
                    alt1=3;
                    }
                    break;
                case 48:
                    {
                    alt1=4;
                    }
                    break;
                case 28:
                    {
                    alt1=5;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:33:9: listLengArchivo
            	    {
            	    pushFollow(FOLLOW_listLengArchivo_in_md91);
            	    listLengArchivo3=listLengArchivo();

            	    state._fsp--;

            	    adaptor.addChild(root_0, listLengArchivo3.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:33:27: listLengClases
            	    {
            	    pushFollow(FOLLOW_listLengClases_in_md95);
            	    listLengClases4=listLengClases();

            	    state._fsp--;

            	    adaptor.addChild(root_0, listLengClases4.getTree());

            	    }
            	    break;
            	case 3 :
            	    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:33:44: listLengComandos
            	    {
            	    pushFollow(FOLLOW_listLengComandos_in_md99);
            	    listLengComandos5=listLengComandos();

            	    state._fsp--;

            	    adaptor.addChild(root_0, listLengComandos5.getTree());

            	    }
            	    break;
            	case 4 :
            	    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:33:63: listLengFns
            	    {
            	    pushFollow(FOLLOW_listLengFns_in_md103);
            	    listLengFns6=listLengFns();

            	    state._fsp--;

            	    adaptor.addChild(root_0, listLengFns6.getTree());

            	    }
            	    break;
            	case 5 :
            	    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:33:77: listLengApp
            	    {
            	    pushFollow(FOLLOW_listLengApp_in_md107);
            	    listLengApp7=listLengApp();

            	    state._fsp--;

            	    adaptor.addChild(root_0, listLengApp7.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

                    catch (RecognitionException e) 
                    {
                        throw e;
                    }
                    finally {
        }
        return retval;
    }
    // $ANTLR end "md"

    public static class listLengArchivo_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "listLengArchivo"
    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:42:1: listLengArchivo : '$' ALIASA '.' ALIASA opcionesA '$$' ;
    public final mdParser.listLengArchivo_return listLengArchivo() throws RecognitionException {
        mdParser.listLengArchivo_return retval = new mdParser.listLengArchivo_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal8=null;
        Token ALIASA9=null;
        Token char_literal10=null;
        Token ALIASA11=null;
        Token string_literal13=null;
        mdParser.opcionesA_return opcionesA12 = null;


        Object char_literal8_tree=null;
        Object ALIASA9_tree=null;
        Object char_literal10_tree=null;
        Object ALIASA11_tree=null;
        Object string_literal13_tree=null;

        try {
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:42:18: ( '$' ALIASA '.' ALIASA opcionesA '$$' )
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:42:20: '$' ALIASA '.' ALIASA opcionesA '$$'
            {
            root_0 = (Object)adaptor.nil();

            char_literal8=(Token)match(input,12,FOLLOW_12_in_listLengArchivo155); 
            char_literal8_tree = (Object)adaptor.create(char_literal8);
            adaptor.addChild(root_0, char_literal8_tree);

            ALIASA9=(Token)match(input,ALIASA,FOLLOW_ALIASA_in_listLengArchivo157); 
            ALIASA9_tree = (Object)adaptor.create(ALIASA9);
            adaptor.addChild(root_0, ALIASA9_tree);

            char_literal10=(Token)match(input,13,FOLLOW_13_in_listLengArchivo159); 
            char_literal10_tree = (Object)adaptor.create(char_literal10);
            adaptor.addChild(root_0, char_literal10_tree);

            ALIASA11=(Token)match(input,ALIASA,FOLLOW_ALIASA_in_listLengArchivo161); 
            ALIASA11_tree = (Object)adaptor.create(ALIASA11);
            adaptor.addChild(root_0, ALIASA11_tree);

            pushFollow(FOLLOW_opcionesA_in_listLengArchivo163);
            opcionesA12=opcionesA();

            state._fsp--;

            adaptor.addChild(root_0, opcionesA12.getTree());
            string_literal13=(Token)match(input,14,FOLLOW_14_in_listLengArchivo165); 
            string_literal13_tree = (Object)adaptor.create(string_literal13);
            adaptor.addChild(root_0, string_literal13_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

                    catch (RecognitionException e) 
                    {
                        throw e;
                    }
                    finally {
        }
        return retval;
    }
    // $ANTLR end "listLengArchivo"

    public static class opcionesA_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "opcionesA"
    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:1: opcionesA : '{' ( ubicacionA | ) ( Fecha | ) ( Hora | ) '}' ;
    public final mdParser.opcionesA_return opcionesA() throws RecognitionException {
        mdParser.opcionesA_return retval = new mdParser.opcionesA_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal14=null;
        Token Fecha16=null;
        Token Hora17=null;
        Token char_literal18=null;
        mdParser.ubicacionA_return ubicacionA15 = null;


        Object char_literal14_tree=null;
        Object Fecha16_tree=null;
        Object Hora17_tree=null;
        Object char_literal18_tree=null;

        try {
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:12: ( '{' ( ubicacionA | ) ( Fecha | ) ( Hora | ) '}' )
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:14: '{' ( ubicacionA | ) ( Fecha | ) ( Hora | ) '}'
            {
            root_0 = (Object)adaptor.nil();

            char_literal14=(Token)match(input,15,FOLLOW_15_in_opcionesA173); 
            char_literal14_tree = (Object)adaptor.create(char_literal14);
            adaptor.addChild(root_0, char_literal14_tree);

            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:18: ( ubicacionA | )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==13||(LA2_0>=17 && LA2_0<=18)) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=Fecha && LA2_0<=Hora)||LA2_0==16) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:19: ubicacionA
                    {
                    pushFollow(FOLLOW_ubicacionA_in_opcionesA176);
                    ubicacionA15=ubicacionA();

                    state._fsp--;

                    adaptor.addChild(root_0, ubicacionA15.getTree());

                    }
                    break;
                case 2 :
                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:32: 
                    {
                    }
                    break;

            }

            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:34: ( Fecha | )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==Fecha) ) {
                alt3=1;
            }
            else if ( (LA3_0==Hora||LA3_0==16) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:35: Fecha
                    {
                    Fecha16=(Token)match(input,Fecha,FOLLOW_Fecha_in_opcionesA183); 
                    Fecha16_tree = (Object)adaptor.create(Fecha16);
                    adaptor.addChild(root_0, Fecha16_tree);


                    }
                    break;
                case 2 :
                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:43: 
                    {
                    }
                    break;

            }

            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:45: ( Hora | )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==Hora) ) {
                alt4=1;
            }
            else if ( (LA4_0==16) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:46: Hora
                    {
                    Hora17=(Token)match(input,Hora,FOLLOW_Hora_in_opcionesA190); 
                    Hora17_tree = (Object)adaptor.create(Hora17);
                    adaptor.addChild(root_0, Hora17_tree);


                    }
                    break;
                case 2 :
                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:43:53: 
                    {
                    }
                    break;

            }

            char_literal18=(Token)match(input,16,FOLLOW_16_in_opcionesA196); 
            char_literal18_tree = (Object)adaptor.create(char_literal18);
            adaptor.addChild(root_0, char_literal18_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

                    catch (RecognitionException e) 
                    {
                        throw e;
                    }
                    finally {
        }
        return retval;
    }
    // $ANTLR end "opcionesA"

    public static class ubicacionA_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ubicacionA"
    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:44:1: ubicacionA : ( relativa | absoluta );
    public final mdParser.ubicacionA_return ubicacionA() throws RecognitionException {
        mdParser.ubicacionA_return retval = new mdParser.ubicacionA_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        mdParser.relativa_return relativa19 = null;

        mdParser.absoluta_return absoluta20 = null;



        try {
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:44:13: ( relativa | absoluta )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==13||LA5_0==18) ) {
                alt5=1;
            }
            else if ( (LA5_0==17) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:44:15: relativa
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_relativa_in_ubicacionA204);
                    relativa19=relativa();

                    state._fsp--;

                    adaptor.addChild(root_0, relativa19.getTree());

                    }
                    break;
                case 2 :
                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:44:26: absoluta
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_absoluta_in_ubicacionA208);
                    absoluta20=absoluta();

                    state._fsp--;

                    adaptor.addChild(root_0, absoluta20.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

                    catch (RecognitionException e) 
                    {
                        throw e;
                    }
                    finally {
        }
        return retval;
    }
    // $ANTLR end "ubicacionA"

    public static class absoluta_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "absoluta"
    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:45:1: absoluta : ( '/' ALIASA )+ ;
    public final mdParser.absoluta_return absoluta() throws RecognitionException {
        mdParser.absoluta_return retval = new mdParser.absoluta_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal21=null;
        Token ALIASA22=null;

        Object char_literal21_tree=null;
        Object ALIASA22_tree=null;

        try {
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:45:11: ( ( '/' ALIASA )+ )
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:45:13: ( '/' ALIASA )+
            {
            root_0 = (Object)adaptor.nil();

            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:45:13: ( '/' ALIASA )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==17) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:45:14: '/' ALIASA
            	    {
            	    char_literal21=(Token)match(input,17,FOLLOW_17_in_absoluta217); 
            	    char_literal21_tree = (Object)adaptor.create(char_literal21);
            	    adaptor.addChild(root_0, char_literal21_tree);

            	    ALIASA22=(Token)match(input,ALIASA,FOLLOW_ALIASA_in_absoluta218); 
            	    ALIASA22_tree = (Object)adaptor.create(ALIASA22);
            	    adaptor.addChild(root_0, ALIASA22_tree);


            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

                    catch (RecognitionException e) 
                    {
                        throw e;
                    }
                    finally {
        }
        return retval;
    }
    // $ANTLR end "absoluta"

    public static class relativa_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "relativa"
    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:46:1: relativa : ( '.' ( '/' ALIASA )+ | '..' ( '/' ALIASA )* );
    public final mdParser.relativa_return relativa() throws RecognitionException {
        mdParser.relativa_return retval = new mdParser.relativa_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal23=null;
        Token char_literal24=null;
        Token ALIASA25=null;
        Token string_literal26=null;
        Token char_literal27=null;
        Token ALIASA28=null;

        Object char_literal23_tree=null;
        Object char_literal24_tree=null;
        Object ALIASA25_tree=null;
        Object string_literal26_tree=null;
        Object char_literal27_tree=null;
        Object ALIASA28_tree=null;

        try {
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:46:11: ( '.' ( '/' ALIASA )+ | '..' ( '/' ALIASA )* )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==13) ) {
                alt9=1;
            }
            else if ( (LA9_0==18) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:46:13: '.' ( '/' ALIASA )+
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal23=(Token)match(input,13,FOLLOW_13_in_relativa228); 
                    char_literal23_tree = (Object)adaptor.create(char_literal23);
                    adaptor.addChild(root_0, char_literal23_tree);

                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:46:16: ( '/' ALIASA )+
                    int cnt7=0;
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==17) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:46:17: '/' ALIASA
                    	    {
                    	    char_literal24=(Token)match(input,17,FOLLOW_17_in_relativa230); 
                    	    char_literal24_tree = (Object)adaptor.create(char_literal24);
                    	    adaptor.addChild(root_0, char_literal24_tree);

                    	    ALIASA25=(Token)match(input,ALIASA,FOLLOW_ALIASA_in_relativa231); 
                    	    ALIASA25_tree = (Object)adaptor.create(ALIASA25);
                    	    adaptor.addChild(root_0, ALIASA25_tree);


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt7 >= 1 ) break loop7;
                                EarlyExitException eee =
                                    new EarlyExitException(7, input);
                                throw eee;
                        }
                        cnt7++;
                    } while (true);


                    }
                    break;
                case 2 :
                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:46:31: '..' ( '/' ALIASA )*
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal26=(Token)match(input,18,FOLLOW_18_in_relativa237); 
                    string_literal26_tree = (Object)adaptor.create(string_literal26);
                    adaptor.addChild(root_0, string_literal26_tree);

                    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:46:35: ( '/' ALIASA )*
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( (LA8_0==17) ) {
                            alt8=1;
                        }


                        switch (alt8) {
                    	case 1 :
                    	    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:46:36: '/' ALIASA
                    	    {
                    	    char_literal27=(Token)match(input,17,FOLLOW_17_in_relativa239); 
                    	    char_literal27_tree = (Object)adaptor.create(char_literal27);
                    	    adaptor.addChild(root_0, char_literal27_tree);

                    	    ALIASA28=(Token)match(input,ALIASA,FOLLOW_ALIASA_in_relativa240); 
                    	    ALIASA28_tree = (Object)adaptor.create(ALIASA28);
                    	    adaptor.addChild(root_0, ALIASA28_tree);


                    	    }
                    	    break;

                    	default :
                    	    break loop8;
                        }
                    } while (true);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

                    catch (RecognitionException e) 
                    {
                        throw e;
                    }
                    finally {
        }
        return retval;
    }
    // $ANTLR end "relativa"

    public static class listLengClases_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "listLengClases"
    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:53:1: listLengClases : 'class' ALIASA ( ALIASA )+ propiedad '/class' ;
    public final mdParser.listLengClases_return listLengClases() throws RecognitionException {
        mdParser.listLengClases_return retval = new mdParser.listLengClases_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal29=null;
        Token ALIASA30=null;
        Token ALIASA31=null;
        Token string_literal33=null;
        mdParser.propiedad_return propiedad32 = null;


        Object string_literal29_tree=null;
        Object ALIASA30_tree=null;
        Object ALIASA31_tree=null;
        Object string_literal33_tree=null;

        try {
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:53:17: ( 'class' ALIASA ( ALIASA )+ propiedad '/class' )
            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:53:19: 'class' ALIASA ( ALIASA )+ propiedad '/class'
            {
            root_0 = (Object)adaptor.nil();

            string_literal29=(Token)match(input,19,FOLLOW_19_in_listLengClases352); 
            string_literal29_tree = (Object)adaptor.create(string_literal29);
            adaptor.addChild(root_0, string_literal29_tree);

            ALIASA30=(Token)match(input,ALIASA,FOLLOW_ALIASA_in_listLengClases354); 
            ALIASA30_tree = (Object)adaptor.create(ALIASA30);
            adaptor.addChild(root_0, ALIASA30_tree);

            // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:53:34: ( ALIASA )+
            int cnt10=0;
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==ALIASA) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // /home/jvidalva/Documentos/practica_compiladores/src/gramaticadesc/md.g:53:35: ALIASA
            	    {
            	    ALIASA31=(Token)match(input,ALIASA,FOLLOW_ALIASA_in_listLengClases357); 
            	    ALIASA31_tree = (Object)adaptor.create(ALIASA31);
            	    adaptor.addChild(root_0, ALIASA31_tree);


            	    }
            	    break;
